# custom_c_string

./: CMakeLists.txt  README.txt  example.c  testing_test.c  words.txt
lib/: length.c  my_str_append.c  my_str_append_c.c  my_str_append_cstr.c  my_str_clear.c  my_str_cmp.c  my_str_cmp_cstr.c  my_str_copy.c  my_str_create.c  my_str_empty.c  my_str_erase.c  my_str_find.c  my_str_find_c.c  my_str_find_if.c  my_str_free.c  my_str_from_cstr.c  my_str_get_cstr.c  my_str_getc.c  my_str_insert.c  my_str_insert_c.c  my_str_insert_cstr.c  my_str_popback.c  my_str_putc.c  my_str_read.c  my_str_read_file.c  my_str_read_file_delim.c  my_str_reserve.c  my_str_shrink_to_fit.c  my_str_substr.c  my_str_substr_cstr.c  my_str_t.c  my_str_write.c  my_str_write_file.c  my_string.h  my_string.h.gch  my_string_body.h  my_string_comparison.h  my_string_manipulation.h  my_string_rw.h
